--- a/carproject/templates/home.html
+++ b/carproject/templates/home.html
@@ -1,7 +1,8 @@
 {% load static %}
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static '/css/carcss.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
