--- a/carproject/static/css/carcss.css
+++ b/carproject/static/css/carcss.css
@@ -1,9 +1,9 @@
 .bus img{
     position: absolute;
-    margin-top: 10%;
+    margin-top: 16%;
     margin-left: 32%;
     width: 35%;
-    height: 35%;
+    height: 50%;
     z-index: 2;
 }
 #big{
@@ -15,13 +15,13 @@
 
 
 .brand{
-    top: 450;
-    left: 545;
-    z-index: 2;
-    position: absolute;
- text-align: center;
- font-family: 'Dancing Script', cursive;
- color: aliceblue;
+top: 450;
+
+z-index: 2;
+position: absolute;
+margin-left: 40%;
+font-family: 'Dancing Script', cursive;
+color: aliceblue;
 }
 
 
@@ -43,7 +43,7 @@
     padding:1px;
 }
 .imgsmok{
-    width: 20%;height: 20%;
+    width: 150px;height: 150px;
 }
 pre {
     white-space: pre-wrap;
@@ -407,22 +407,22 @@ ul{
     font-weight: normal;
 }
 .swift{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .innova{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .tempo{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .hondaCity{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .ciaz{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .innovaOld{
-    width: 60%;height: 100%; float: left;
+    width: 60%;height: 500px; float: left;
 }
 .travera{
     width: 60%;height: 100%; float: left;
@@ -588,31 +588,31 @@ ul{
         height: 40%;
     }
     .swift{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .innova{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .tempo{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .hondaCity{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .ciaz{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .innovaOld{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .travera{
-        width: 100%;height: 100%; float: left;
+        width: 100%;height: 300px; float: left;
     }
     .bus img{
-        margin-top: 63%;
+        margin-top: 61%;
         margin-left: 36%;
         
-        height: 15%;
+        height: 25%;
         width: 27%;
     }
     /* .imgsmok{
@@ -621,7 +621,7 @@ ul{
     } */
     .brand{
         top:350;
-        left: 90;
+      margin-left: 90px;
     }
     .formnotify{
         width: 100%;
@@ -633,8 +633,8 @@ ul{
         width:  10%;
     }
     .imgsmoke{
-        margin-left: 65%;
-        padding-top: 290px;
+        margin-left: 63%;
+        padding-top: 280px;
     }
     .contactedit{
         width: 90%;
